--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body, html{
     font-family: 'SUSE';
     margin-bottom: 3vh;
     user-select: none;
+    width: 100vw;
+    text-align: center;
 }
 
 .form{
@@ -35,6 +37,7 @@ body, html{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 30vw;
 }
 
 textarea{
@@ -45,7 +48,7 @@ textarea{
     border: 2px solid antiquewhite;
     box-sizing: border-box;
     padding: 1vh;
-    width: 20vw;
+    width: 100%;
     border-radius: 1rem 1rem 0 0;
 }
 
@@ -66,7 +69,7 @@ button{
     border: 2px solid antiquewhite;
     box-sizing: border-box;
     padding: 1vh;
-    width: 20vw;
+    width: 100%;
 }
 
 button:last-of-type{
@@ -80,7 +83,7 @@ button:hover{
 }
 
 .slider-label{
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -92,7 +95,7 @@ button:hover{
 }
 
 input[type="range"]{
-    width: 10vw;
+    width: 50%;
     box-sizing: border-box;
     background: #2f4f4f;
     height: 3vh;
@@ -116,4 +119,20 @@ input[type="range"]::-webkit-slider-thumb{
 
 #speed{
     border-radius: 0 0 .5rem .5rem;
+}
+
+@media (width < 1150px){
+    .form{
+        width: 50vw;
+    }
+}
+
+@media (width < 750px){
+    .form{
+        width: 75vw;
+    }
+
+    .logo{
+        font-size: 3rem;
+    }
 }
